...
          title="Restore from a file"
          buttonStyle={mixins.buttonIcon}
          containerStyle={mixins.buttonContainerVertical}
          titleStyle={mixins.buttonIconTitle}
          iconRight
          onPress={onPressRestoreFromFile}
          testID="restore from a file-button"
          icon={
            <MaterialCommunityIcons
              name="file-upload"
              size={theme.iconSize}
              color={theme.color.iconInactive}
            />
...
