...
    <>
      <NavHeader title="Developer Settings" goBack={navigation.goBack} />
      <ScrollView contentContainerStyle={styles.container}>
        <Text style={styles.header}>General</Text>
        <Button
          {...buttonStyleProps}
          title="View developer logs"
          onPress={viewLogs}
        />
        <Button
          {...buttonStyleProps}
          title="Clear developer logs"
          onPress={clearLogs}
...
